fixed margin issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body{
     overflow: hidden;
     color:#333; 
     font-family: 'Courier New', Courier, monospace;
+    margin:0px;
 }
 h1,h2,h3,h4,h5,h6{
     margin: 0px;
